hphp/hack/test/typecheck/reactive/test_freeze1.php.exp
File "test_freeze1.php", line 12, characters 3-10:
This object's property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
